# agentic-aiops

./: README.md  main.py  pyproject.toml
notebook/: baseline-agent.ipynb  mlflow_tracing.py  openrca-overview.ipynb
notebook/prompt/: agent-instruction.md
notebook/utils/: mlflow_tracing.py
rca-skills/openrca-rca-fastpath/: SKILL.md
rca-skills/openrca-rca-fastpath/references/: environment-baseline.md  metrics-catalog.md  output-template.md  query-packs.md
