[project]
name = "agentic-aiops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.4",
    "fastapi>=0.129.1",
    "fastmcp>=3.0.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "mlflow[databricks]>=3.1",
    "python-dotenv>=1.2.1",
]
